welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:28: error: not found: value def_faire_ligne
def_faire_ligne(){
^